# jljb

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: testing.yml
src/jljb/: __init__.py  make_jl_dir.py  process_notebooks.py
tests/: example__config.yml  test_cli.py  test_process.py
